[project]
name = "lx-music-api-server"
version = "3.0.3"
description = "Unofficial LX Music 's Backend. Uses: FastAPI, Uvicorn, Aiohttp"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome (>=3.22.0,<4.0.0)",
    "redis==7.1.0",
    "cryptography==46.0.3",
    "uvicorn==0.40.0",
    "aiohttp (>=3.12.15,<4.0.0)",
    "orjson>=3.11.3",
    "loguru>=0.7.3",
    "xmltodict>=1.0.2",
    "apscheduler==3.11.2",
    "fastapi==0.128.0",
    "asyncio>=4.0.0",
]
